apps/nextjs-app/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: myapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: myapp.staging.molntek.com
    # Overrides the IP that external-dns will publish
    external-dns.alpha.kubernetes.io/target: "90.129.244.3"
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.molntek.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
  tls:
    - hosts:
        - myapp.staging.molntek.com
      secretName: myapp-tls
